--- a/app/templates/src4mobi/mobi/src/_index.html
+++ b/app/templates/src4mobi/mobi/src/_index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -9,7 +9,7 @@
     <meta name="apple-itunes-app" content="app-id=" />
     <link rel="apple-touar-icon" sizes="114x114" href="" />
     <title> 模板页 </title>
-    <link href="css/index.css" rel="stylesheet">
+    <link href="css/custom/index.css" rel="stylesheet">
 </head>
 <body>
    
