增加命令 `yo lego:doc`
1. slice 移动至 img/slice，更新gulp配置
2. 增加命令 `yo lego:doc`，初始化项目文档

--- a/more/templates/src4game1/sass/mod/_index.scss
+++ b/more/templates/src4game1/sass/mod/_index.scss
@@ -306,7 +306,7 @@
 					width: 9px;
 					height: 9px;
 					font-size: 0px;
-					background-image: url("../slice/icon-more.png");
+					background-image: url("../img/slice/icon-more.png");
 				}
 			}
 		}
@@ -489,7 +489,7 @@
 					width: 9px;
 					height: 9px;
 					font-size: 0px;
-					background-image: url("../slice/icon-more.png");
+					background-image: url("../img/slice/icon-more.png");
 				}
 			}
 		}
