--- a/more/templates/src4game1/sass/mod/_pagemod.scss
+++ b/more/templates/src4game1/sass/mod/_pagemod.scss
@@ -73,7 +73,7 @@
 					width: 9px;
 					height: 9px;
 					font-size: 0px;
-					background-image: url("../slice/icon-more.png");
+					background-image: url("../img/slice/icon-more.png");
 				}
 			}
 		}
@@ -164,7 +164,7 @@
 					width: 9px;
 					height: 9px;
 					font-size: 0px;
-					background-image: url("../slice/icon-more.png");
+					background-image: url("../img/slice/icon-more.png");
 				}
 			}
 		}
@@ -405,7 +405,7 @@ li.selected{font-weight:700;background-color:#289edd;color:#fff}
 			i{
 				width: 16px;
 				height: 16px;
-				background-image: url("../slice/icon-video.png");
+				background-image: url("../img/slice/icon-video.png");
 				position: absolute;
 				top: 50%;
 				left: 5px;
@@ -553,7 +553,7 @@ li.selected{font-weight:700;background-color:#289edd;color:#fff}
 			width: 16px;
 			height: 14px;
 			margin-top: -7px;
-			background-image: url("../slice/icon-home.png");
+			background-image: url("../img/slice/icon-home.png");
 			
 		}
 	}
