--- a/more/templates/src4game1/sass/mod/_site-foot.scss
+++ b/more/templates/src4game1/sass/mod/_site-foot.scss
@@ -119,7 +119,7 @@
 			text-indent: -100%;
 			font-size: 0px;
 			display: block;
-			background-image: url("../slice/icon-footlogo.png");
+			background-image: url("../img/slice/icon-footlogo.png");
 		}
 		.search{
 			margin-top: 20px;
@@ -141,7 +141,7 @@
 				position: absolute;
 				top: 50%;
 				right: 5px;
-				background-image: url("../slice/icon-search1.png");
+				background-image: url("../img/slice/icon-search1.png");
 				width: 18px;
 				height: 18px;
 				text-indent: -200%;
