--- a/more/templates/src4game1/sass/mod/_site-head.scss
+++ b/more/templates/src4game1/sass/mod/_site-head.scss
@@ -136,7 +136,7 @@
 				left: 0px;
 				width: 16px;
 				height: 16px;
-				background-image: url("../slice/icon-down.png");
+				background-image: url("../img/slice/icon-down.png");
 			}
 		}
 		.fav{
@@ -147,7 +147,7 @@
 				left: 0px;
 				width: 16px;
 				height: 16px;
-				background-image: url("../slice/icon-fav.png");
+				background-image: url("../img/slice/icon-fav.png");
 			}
 		}
 		.search{
@@ -170,7 +170,7 @@
 				right: 5px;
 				height: 18px;
 				width: 18px;
-				background-image: url("../slice/icon-search.png");
+				background-image: url("../img/slice/icon-search.png");
 				text-indent: -100%;
 				font-size: 0px;
 				overflow: hidden;
