根据HTML规范指南调整初始化状态
根据HTML规范指南调整初始化状态

--- a/app/templates/src4pc/_index.html
+++ b/app/templates/src4pc/_index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-cmn-Hans">
+
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="edge">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="renderer" content="webkit">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="Keywords" content="">
@@ -10,7 +11,11 @@
     <title> demo </title>
     <link href="css/global.css" rel="stylesheet">
 </head>
+
 <body>
-    
+
+
+
 </body>
+
 </html>
