--- a/more/templates/src4game1/tpl/partial/article.ejs
+++ b/more/templates/src4game1/tpl/partial/article.ejs
@@ -13,6 +13,8 @@
 	<p>2.雄心</p>
 	<p style="text-align: center;"><img src="http://img4.dwstatic.com/jf/1411/279719263395/279719379205.jpg" zoomfile="http://img.dwstatic.com/jf/1411/279719263395/279719379205.jpg" file="http://img.dwstatic.com/jf/1411/279719263395/279719379205.jpg" inpost="1" alt="雄心.jpg" title="雄心.jpg" initialized="true"></p>
 	<p>拥有雄心效果的怪物身边会有几个红色的小球，在受到程度的攻击后，小球会消失，同时怪物进入持续霸体状态，破霸体技能是破除不了雄心的，只能等雄心持续时间结束或者击杀该怪物。</p>
+   <p style="text-align: center;"> <img src="http://img2.dwstatic.com/aa/1505/295624239831/1431669079316.jpg" alt="三个步骤教你上古世纪滑翔翼升级 新手必看"></p>
+   <p style="text-align: center;"><a href="javascript:;"><img src="http://img2.dwstatic.com/aa/1505/295624239831/1431669079316.jpg" alt="三个步骤教你上古世纪滑翔翼升级 新手必看"></a></p>
 </div>
 <!-- 页码{ -->
 <div class="mod-page">
