--- a/more/templates/src4game1/tpl/partial/index-focus.ejs
+++ b/more/templates/src4game1/tpl/partial/index-focus.ejs
@@ -83,8 +83,8 @@
 						<li class="selected">最新动态</li>
 						<li>重点推荐</li>
 						<li>热点赛事</li>
-						<li><a href="">更多&raquo;</a></li>
 			        </ul>
+			        <a href="" class="mod-tab-more">更多&raquo;</a>
 				</div>
 				<div class="mod-tab-bd J_content">
 					<div class="mod-tab-content">
