--- a/more/templates/src4game1/tpl/partial/page-aside.ejs
+++ b/more/templates/src4game1/tpl/partial/page-aside.ejs
@@ -91,7 +91,7 @@
 				<em>物品专题</em>
 			</a></li>
 		</ul>
-		   
+
 		<!-- }小图列表 -->
 
 	</div>
@@ -142,7 +142,7 @@
 		</div>
 		<!-- }资料list -->
 		<!-- 资料list{ -->
-		<div class="data-list">
+		<div class="data-list is-nborder">
 			<span class="label">新手必备</span>
 			<a href="">创建人物</a>
 			<a href="">基础操作</a>
@@ -173,7 +173,7 @@
 </div>
 <!-- }专区资料 -->
 <div class="ZQ-gap"></div>
-<div class="m-tab m-tab--weekly" id="weekly1">
+<div class="m-tab m-tab--weekly is-short" id="weekly1">
 	<div class="mod-tab-hd">
 		<h3 class="mod-tab-title">综合攻略</h3>
 		<ul class="mod-tab-trigger J_nav">
@@ -204,7 +204,7 @@
 	</div>
 </div>
 <div class="ZQ-gap"></div>
-<div class="m-tab m-tab--weekly" id="weekly1">
+<div class="m-tab m-tab--weekly is-short" id="weekly1">
 	<div class="mod-tab-hd">
 		<h3 class="mod-tab-title">综合攻略</h3>
 		<ul class="mod-tab-trigger J_nav">
