--- a/more/templates/src4game1/tpl/专区文章页.ejs
+++ b/more/templates/src4game1/tpl/专区文章页.ejs
@@ -8,10 +8,6 @@
     <meta name="description" content="">
     <title> 一线专区模板 </title>
     <link href="css/global.css" rel="stylesheet">
-    <link href="css/demo.css" rel="stylesheet">
-    <script src="http://assets.dwstatic.com/common/js/jquery.js"></script>
-    <script src="http://assets.dwstatic.com/b=lego/2.0.0/js&f=lego.switchable.js"></script>
-    <script src="http://assets.dwstatic.com/game/ff14/1.0.0/js/main.js"></script>
 </head>
 <body>
     <!-- 专区{ -->
@@ -92,20 +88,17 @@
                             }
                             </style>
                             <!-- }百度分享 -->
-                            <script type="text/javascript">
+                          <!--   <script type="text/javascript">
                                 var thisTitle =encodeURIComponent('FF14深夜独11111是打测试文章');
-                                                        showQqWeibo(thisTitle);
+                                showQqWeibo(thisTitle);
                                 shareToSina(thisTitle);
                                 shareTokaixin001(thisTitle);
                                 shareTorenren(thisTitle);
                                 shareToQq(thisTitle);
-                            </script>
-                            <!-- }社交站分享 -->        
+                            </script> -->
+                            <!-- }社交站分享 -->
                         </div>
-                        <script>
-                        //格式文章页图片
-                        ZQ.imageLightbox();
-                        </script>
+
                     </div>
                     <div class="ZQ-gap"></div>
                     <!-- 新闻{ -->
@@ -167,9 +160,6 @@
                                     <li><a href="#">3</a></li>
                                 </ul>
                             </div>
-                            <script>
-                            LEGO.slide("#slider1", {effect: "scrollY"} );
-                            </script>
                             <!-- }轮播图 -->
                         </div>
                     </div>
@@ -202,4 +192,12 @@
     </div>
     <!-- }专区 -->
 </body>
+    <script src="http://assets.dwstatic.com/common/js/jquery.js"></script>
+    <script src="http://assets.dwstatic.com/b=lego/2.0.0/js&f=lego.switchable.js"></script>
+    <script src="js/main.js"></script>
+   <script>
+    LEGO.slide("#slider1", {effect: "scrollY"} );
+    //格式文章页图片
+    ZQ.imageLightbox();
+    </script>
 </html>
