--- a/more/templates/src4game1/tpl/partial/index-guide.ejs
+++ b/more/templates/src4game1/tpl/partial/index-guide.ejs
@@ -225,7 +225,7 @@
 				</div>
 				<!-- }资料list -->
 				<!-- 资料list{ -->
-				<div class="data-list">
+				<div class="data-list is-nborder">
 					<span class="label">新手必备</span>
 					<a href="">创建人物</a>
 					<a href="">基础操作</a>
