--- a/more/templates/src4game1/tpl/partial/zq-foot.ejs
+++ b/more/templates/src4game1/tpl/partial/zq-foot.ejs
@@ -49,9 +49,10 @@
             <!-- 搜索 - 标识{ -->
             <div class="foot-action">
                 <a href="" class="duowan" title="多玩游戏网">多玩游戏网</a>
-                <form id="form-search2" method="get" action="http://soso.duowan.com/s" target="_blank" accept-charset="utf-8">
+                <form id="form-search2" method="get" action="http://so.duowan.com/cse/search" target="_blank" accept-charset="utf-8">
                     <div class="search">
-                        <input type="text" name="word" id="" placeholder="请输入关键字...">
+                        <input type="text" name="q" data-baidusug="on" id="" value="请输入关键字" onfocus="if(this.value=='请输入关键字') this.value='';" onblur="if(this.value=='') this.value='请输入关键字';" >
+                        <input type="hidden" name="s" value="14439980297804472906" />
                         <a href="javascript:void(0)" onclick="javascript:document.getElementById('form-search2').submit()" title="搜索" class="submit">搜索</a>
                     </div>
                 </form>
