修复文章页js加载完出现大图
修复文章页js加载完出现大图

--- a/more/templates/src4game1/sass/mod/_article.scss
+++ b/more/templates/src4game1/sass/mod/_article.scss
@@ -73,7 +73,7 @@
 			line-height: 1.5em;
 		}
 		img{
-			// max-width: 100%;
+			max-width: 100%;
 			// margin: 0 auto;
 			// cursor: pointer;
 		}
