--- a/app/templates/src4mobi/sass/base/_base.scss
+++ b/app/templates/src4mobi/sass/base/_base.scss
@@ -44,3 +44,29 @@ table {
 textarea {
 	resize: none;
 }
+
+img {
+    vertical-align: top;
+}
+
+i, em {
+    font-style: normal;
+}
+
+ol, ul, menu {
+    list-style: none outside none;
+}
+
+fieldset, iframe, abbr, acronym {
+    border: 0 none;
+}
+
+dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, input, button, textarea, p, blockquote, th, td, hr,
+article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+}
+
+del {
+    text-decoration:line-through;
+}
