--- a/app/templates/src4mobi/sass/base/_base.scss
+++ b/app/templates/src4mobi/sass/base/_base.scss
@@ -1,5 +1,8 @@
 @charset "utf-8";
 
+// 引入重置样式
+@import "_normalize";
+
 // 引入工具类
 @import "_tool";
 
@@ -53,7 +56,7 @@ i, em {
     font-style: normal;
 }
 
-ol, ul, menu {
+ol, ul, li, menu {
     list-style: none outside none;
 }
 
