update mobile md

--- a/app/templates/src4mobi/_index.html
+++ b/app/templates/src4mobi/_index.html
@@ -9,12 +9,14 @@
     <meta name="apple-itunes-app" content="app-id=" />
     <link rel="apple-touar-icon" sizes="114x114" href="" />
     <title> 模板页 </title>
+    <!-- 自定义样式 start -->
     <link href="css/index.css" rel="stylesheet">
+    <!-- 自定义样式 end -->
 </head>
 <body>
    
-    <!-- Seajs入口开始 -->
+    <!-- legoMobi模块入口 start -->
     <script src="http://assets.dwstatic.com/mobile/src/js/main/seajs/sea-lego.js"></script>
-    <!-- Seajs入口结束 -->
+    <!-- legoMobi模块入口 end -->
 </body>
 </html>
