--- a/app/templates/src4mobi/sass/_global.scss
+++ b/app/templates/src4mobi/sass/_global.scss
@@ -1,5 +1,5 @@
-// 引入公共scss模块
-@import 'base/_base';
+// 导入公共scss模块
+@import "base/_base";
 
-// 引入切片样式
-@import '_slice';
+// 导入切片样式
+@import "_slice";
