--- a/more/templates/src4legopc/sass/lego/list.scss
+++ b/more/templates/src4legopc/sass/lego/list.scss
@@ -1,12 +1,14 @@
 @charset "utf-8";
+
 /*
- *@name:    文字列表基础模块
- *@include: 基类 + 基本扩展类 + 双栏扩展类
- *@update:  2014-10-22 16:41:56
+ * @file: 文字列表UI组件
+ * @update: 2015-05-17 16:37:05
  */
-
-
-/* ===基类=== */
+ 
+/*
+ * 默认列表
+ * @base
+ */
 $item-height: 24px; // item高度
 $item-line-height: 24px; // item行高
 $tag-color: #F60 !default; // 标签颜色
@@ -30,27 +32,9 @@ $num-bgcolor: #E8E8E8 !default; // number背景颜色
 	margin-left: 10px;
 	color: $meta-color;
 }
-.ui-list__dot,
-.ui-list__square,
 .ui-list__num {
 	@include inline-block;
-	vertical-align: middle;
 	overflow: hidden;
-}
-.ui-list__dot {
-	margin-right: 5px;
-	width: 3px;
-	height: 3px;
-	background-color: #666;
-	border-radius: 50%;
-}
-.ui-list__square {
-	margin-right: 5px;
-	width: 3px;
-	height: 3px;
-	background-color: #666;
-}
-.ui-list__num {
 	margin-right: 5px;
 	width: 18px;
 	height: 14px;
@@ -62,23 +46,49 @@ $num-bgcolor: #E8E8E8 !default; // number背景颜色
 }
 
 
-/* ===扩展类（双栏）=== */
-.ui-list--half {
-	font-size: 0; /* 所有浏览器 */
-    *word-spacing: -1px; /* IE6/7 */
-	.ui-list__item {
-		@include inline-block;
-		vertical-align: top;
-        font-size: 12px;
-        letter-spacing: normal;
-        word-spacing: normal;
-		width: 48%;
-		*width: 47.99%;
-		margin-right: 2%;
+/*
+ * 实心圆标记
+ * @extend: disc
+ */
+.ui-list {
+	&.ext-disc {
+		list-style: disc inside none;
+	}
+}
+
+/*
+ * 实心方块标记
+ * @extend: square
+ */
+.ui-list {
+	&.ext-square {
+		list-style: square inside none;
+	}
+}
+ 
+
+/*
+ * 双栏列表
+ * @extend: half
+ */
+.ui-list {
+	&.ext-half {
+		font-size: 0; /* 所有浏览器 */
+	    *word-spacing: -1px; /* IE6/7 */
+		.ui-list__item {
+			@include inline-block;
+			vertical-align: top;
+	        font-size: 12px;
+	        letter-spacing: normal;
+	        word-spacing: normal;
+			width: 48%;
+			*width: 47.99%;
+			margin-right: 2%;
+		}
 	}
 }
 @media (-webkit-min-device-pixel-ratio:0) {
-    .ui-list--half {
+    .ui-list.ext-half {
         letter-spacing: -5px; /* Safari 5- 等不支持 font-size: 0 的浏览器*/
     }
 }
