--- a/more/templates/src4legopc/sass/lego/ui.dialog.scss
+++ b/more/templates/src4legopc/sass/lego/ui.dialog.scss
@@ -1,10 +1,13 @@
 @charset "utf-8";
 /*
- *@name:   dialog基础模块
- *@update: 2014-12-01 19:54:05
+ * @file: dialog基础UI组件
+ * @update: 2015-05-03 14:19:53
  */
 
-/* ===基类=== */
+/*
+ * 默认dialog
+ * @base
+ */
 $dialog-bg: #fff; // 弹窗背景色
 $hd-bg: #fff; // 弹窗标题栏背景色
 $tit-font-size: 16px; // 标题字号
@@ -24,9 +27,9 @@ $close-icon-hover: "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAC4AAAAsCAMAAA
 	width: $close-icon-width;
 	height: 0;
 	padding-top: $close-icon-height;
+	overflow: hidden;
 	background-image: url($close-icon);
 	background-repeat: no-repeat;
-	overflow: hidden;
 	border-top-right-radius: 5px;
 	&:hover {
 		background-image: url($close-icon-hover);
@@ -35,9 +38,9 @@ $close-icon-hover: "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAC4AAAAsCAMAAA
 .ui-dialog__hd {
 	position: relative;
 	height: 22px;
-	line-height: 22px;
 	padding: 12px;
 	border-bottom: 1px solid #f2f2f5;
+	line-height: 22px;
 	background-color: $hd-bg;
 	border-radius: 5px 5px 0 0;
 }
@@ -47,7 +50,7 @@ $close-icon-hover: "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAC4AAAAsCAMAAA
 	font-size: $tit-font-size;
 	font-weight: $tit-font-weight;
 }
-.ui-dialog__ext {
+.ui-dialog__meta {
 	font-size: 12px;
 	color: #999;
 }
@@ -57,15 +60,20 @@ $close-icon-hover: "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAC4AAAAsCAMAAA
 }
 
 
-/* ===扩展类（带半透明边框）=== */
+/*
+ * 带半透明边框dialog
+ * @extend: border
+ */
 $border-width: 5px; // 边框大小
 $radius: 5px; // 边框圆角
 
-.ui-dialog--border {
-	padding: $border-width;
-	border-radius: $radius;
-	background-color: rgba(0, 0, 0, 0.2);
-	.ui-dialog-close {
-		right: $border-width;
+.ui-dialog {
+	&.ext-border {
+		padding: $border-width;
+		border-radius: $radius;
+		background-color: rgba(0, 0, 0, 0.2);
+		.ui-dialog-close {
+			right: $border-width;
+		}
 	}
 }
