--- a/more/templates/src4legopc/sass/lego/ui.media.scss
+++ b/more/templates/src4legopc/sass/lego/ui.media.scss
@@ -1,11 +1,12 @@
 @charset "utf-8";
+
 /*
- *@name:   图文混排基础模块
- *@update: 2014-06-07
+ * @file: 图文混排基础UI组件
+ * @update: 2015-05-17 16:37:05
  */
 
-$img-width: 130px; // 图片宽度
-$img-height: 90px; // 图片高度
+$img-width: 60px; // 图片宽度
+$img-height: 60px; // 图片高度
 
 .ui-media__item {
 	@include clearfix;
@@ -22,6 +23,11 @@ $img-height: 90px; // 图片高度
 .ui-media__ft {
 	float: right;
 	margin-left: 15px;
+}
+.ui-media__tit {
+	margin-bottom: 10px;
+	line-height: 1.1;
+	font-size: 16px;
 }
 .ui-media__img {
 	width: $img-width;
