update mobi sass

--- a/app/templates/src4mobi/sass/base/_base.scss
+++ b/app/templates/src4mobi/sass/base/_base.scss
@@ -1,10 +1,10 @@
 @charset "utf-8";
 
 // 引入重置样式
-@import "_normalize";
+@import "normalize";
 
 // 引入工具类
-@import "_tool";
+@import "tool";
 
 /* 全局设置 */
 *,
