--- a/more/templates/src4legopc/sass/global.scss
+++ b/more/templates/src4legopc/sass/global.scss
@@ -1,10 +1,10 @@
 @charset "utf-8";
 
 /*
- *@file:   全局样式
- *@update: 2015-05-29 09:08:18
+ * @file:   全局样式
+ * @update: 2015-05-29 09:08:18
  */
 
-@import "lego/lego"; // LEGO UI
-@import "slice"; // sprites切片样式
+@import "lego/lego"; // LegoUI for pc
+@import "slice"; // sprites切片占位符
 
