一线专区模板更新
增加其他专区用到的模板跟更新网站地图

--- a/more/templates/src4game1/sass/_slice.scss
+++ b/more/templates/src4game1/sass/_slice.scss
@@ -11,6 +11,18 @@
     background-image: url(../img/slice/hot.png);
     background-repeat: no-repeat;
 }
+%icon-backtoTop-hover {
+    width: 48px;
+    height: 48px;
+    background-image: url(../img/slice/icon-backtoTop-hover.jpg);
+    background-repeat: no-repeat;
+}
+%icon-backtoTop {
+    width: 48px;
+    height: 48px;
+    background-image: url(../img/slice/icon-backtoTop.jpg);
+    background-repeat: no-repeat;
+}
 %icon-down {
     width: 16px;
     height: 16px;
