--- a/more/templates/src4game1/tpl/_index.ejs
+++ b/more/templates/src4game1/tpl/_index.ejs
@@ -8,11 +8,10 @@
     <meta name="description" content="">
     <title> 一线专区模板 </title>
     <link href="css/global.css" rel="stylesheet">
-    <link href="css/demo.css" rel="stylesheet">
     <script src="http://assets.dwstatic.com/common/js/jquery.js"></script>
     <script type="text/javascript" src="js/jquery.nicescroll.min.js"></script>
     <script src="http://assets.dwstatic.com/b=lego/2.0.0/js&f=lego.switchable.js"></script>
-    <script src="js/main.js"></script>
+
 </head>
 <body>
     <!-- 专区{ -->
@@ -57,5 +56,9 @@
         <!-- }专区底部 -->
     </div>
     <!-- }专区 -->
+    <!-- 返回顶部{ -->
+    <a href="javascript:;" class="backtoTop" id="backtoTop"></a>
+    <!-- }返回顶部 -->
 </body>
+<script src="js/index.js"></script>
 </html>
