--- a/more/templates/src4game1/tpl/partial/zq-foot.ejs
+++ b/more/templates/src4game1/tpl/partial/zq-foot.ejs
@@ -1,6 +1,18 @@
 <div class="ZQ__foot">
     <!-- 网站地图{ -->
     <div class="ZQ__map">
+        <!-- 搜索 - 标识{ -->
+        <div class="foot-action">
+            <form id="form-search2" method="get" action="http://so.duowan.com/cse/search" target="_blank" accept-charset="utf-8">
+                <div class="search">
+                    <input type="text" name="q" data-baidusug="on" id="" value="请输入关键字" onfocus="if(this.value=='请输入关键字') this.value='';" onblur="if(this.value=='') this.value='请输入关键字';" >
+                    <input type="hidden" name="s" value="14439980297804472906" />
+                    <a href="javascript:void(0)" onclick="javascript:document.getElementById('form-search2').submit()" title="搜索" class="submit">搜索</a>
+                </div>
+                <a href="" class="connect">联系主编</a>
+            </form>
+        </div>
+        <!-- }搜索 - 标识 -->
         <div class="inner">
             <div class="map-list">
                 <ul class="list">
@@ -45,23 +57,14 @@
                     <li><a href="">研发日志</a></li>
                     <li><a href="">小道消息</a></li>
                 </ul>
+                <ul class="list">
+                    <li><span class="label">热点新闻</span></li>
+                    <li><a href="">官方新闻</a></li>
+                    <li><a href="">研发日志</a></li>
+                    <li><a href="">小道消息</a></li>
+                </ul>
             </div>
-            <!-- 搜索 - 标识{ -->
-            <div class="foot-action">
-                <a href="" class="duowan" title="多玩游戏网">多玩游戏网</a>
-                <form id="form-search2" method="get" action="http://so.duowan.com/cse/search" target="_blank" accept-charset="utf-8">
-                    <div class="search">
-                        <input type="text" name="q" data-baidusug="on" id="" value="请输入关键字" onfocus="if(this.value=='请输入关键字') this.value='';" onblur="if(this.value=='') this.value='请输入关键字';" >
-                        <input type="hidden" name="s" value="14439980297804472906" />
-                        <a href="javascript:void(0)" onclick="javascript:document.getElementById('form-search2').submit()" title="搜索" class="submit">搜索</a>
-                    </div>
-                </form>
-                <p>
-                    <a class="connect" href="">联系我们</a>
-                    <a class="que" href="">疑难问答</a>
-                </p>
-            </div>
-            <!-- }搜索 - 标识 -->
+
         </div>
     </div>
     <!-- }网站地图 -->
