--- a/more/templates/src4game1/sass/mod/_pagemod.scss
+++ b/more/templates/src4game1/sass/mod/_pagemod.scss
@@ -566,3 +566,17 @@ li.selected{font-weight:700;background-color:#289edd;color:#fff}
 }
 
 
+.backtoTop{
+	width:48px;
+	height:48px;
+	background-image: url("../img/slice/icon-backtoTop.jpg");
+	position: fixed;
+	right:5%;
+	bottom:10%;
+	opacity: 0;
+	outline:0 none;
+	&:hover{
+		background-image: url("../img/slice/icon-backtoTop-hover.jpg");
+	}
+}
+
