禁止百度搜狗神马自动转码

--- a/app/templates/src4mobi/_index.html
+++ b/app/templates/src4mobi/_index.html
@@ -6,6 +6,8 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="format-detection" content="telephone=no,address=no,email=no">
+    <meta http-equiv="Cache-Control" content="no-transform">
+    <meta http-equiv="Cache-Control" content="no-siteapp">
     <meta name="apple-itunes-app" content="app-id=" />
     <link rel="apple-touar-icon" sizes="114x114" href="" />
     <title> 模板页 </title>
@@ -14,7 +16,7 @@
     <!-- 自定义样式 end -->
 </head>
 <body>
-   
+
     <!-- legoMobi模块入口 start -->
     <script src="http://assets.dwstatic.com/mobile/src/js/main/seajs/sea-lego.js"></script>
     <!-- legoMobi模块入口 end -->
