--- a/app/templates/src4mobi/sass/base/_tool.scss
+++ b/app/templates/src4mobi/sass/base/_tool.scss
@@ -1,7 +1,7 @@
 /* @name: 上下左右居中 */
 @mixin centers{
-    text-align:center; 
-	display:table-cell; 
+    text-align:center;
+	display:table-cell;
 	vertical-align:middle;
 }
 
@@ -31,42 +31,45 @@
 }
 
 /*
- * @name:  border三角形
- * @param: $base {dimension}  底边尺寸
- * @param: $height {dimension}  高度
- * @param: $color {color}  颜色
- * @param: $direction {string}  方向 (top || bottom || left || right)
- * @link:  http://codepen.io/zhouwenbin/pen/emZVZp
+ * @name:  三角形
+ * @param: $size  大小
+ * @param: $color 颜色
+ * @param: $type {string}  类型 (up || down || left || right || topleft || topright || bottomleft || bottomright)
  */
-@mixin triangle($base,$height,$color,$direction){
-    font-size: 0;
-    width: 0;
-    height: 0;
-    line-height: 0;
-    overflow: hidden;
-    display: inline-block;
-    vertical-align: -2px;
-    border-style: dashed;
-    
-    @if($direction == top){
-        border-width: $height $base / 2 ;
-        border-color: transparent transparent $color transparent;
-        margin-top: -$height;
-    }
-    @if($direction == bottom){
-        border-width: $height $base / 2 ;
-        border-color: $color transparent transparent transparent;
-        margin-bottom: -$height;
-    }
-    @if($direction == left){
-        border-width: $base / 2 $height ;
-        border-color: transparent transparent transparent $color;
-        margin-right: -$height;
-    }
-    @if($direction == right){
-        border-width: $base / 2 $height ;
-        border-color: transparent $color transparent transparent;
-        margin-left: -$height;
-    }
-}
-
+ @mixin triangle(
+    $size: 50px,
+    $type: up,
+    $color: #6699FF
+ ){
+     width: 0;
+     height: 0;
+     @if $type == up {
+         border-left: $size/2 solid transparent;
+         border-right: $size/2 solid transparent;
+         border-bottom: $size solid $color;
+     }@else if $type == down {
+         border-left: $size/2 solid transparent;
+         border-right: $size/2 solid transparent;
+         border-top: $size solid $color;
+     }@else if $type == left {
+         border-top: $size/2 solid transparent;
+         border-right: $size/2 solid $color;
+         border-bottom: $size solid transparent;
+     }@else if $type == right {
+         border-top: $size/2 solid transparent;
+         border-left: $size/2 solid $color;
+         border-bottom: $size solid transparent;
+     }@else if $type == topleft {
+         border-top: $size solid $color;
+         border-right: $size solid transparent;
+     }@else if $type == topright {
+         border-top: $size solid $color;
+         border-left: $size solid transparent;
+     }@else if $type == bottomleft {
+         border-bottom: $size solid $color;
+         border-right: $size solid transparent;
+     }@else if $type == bottomright {
+         border-bottom: $size solid $color;
+         border-left: $size solid transparent;
+     }
+ }
