--- a/app/templates/src4mobi/sass/base/_tool.scss
+++ b/app/templates/src4mobi/sass/base/_tool.scss
@@ -1,8 +1,20 @@
-/* @name: 上下左右居中 */
+/* @name: 上下左右居中 (未知高度)
+ * @ps: 需要设置父元素 display:table
+ */
 @mixin centers{
     text-align:center;
 	display:table-cell;
 	vertical-align:middle;
+}
+
+/* @name: 上下左右居中 （确定高度）*/
+@mixin centersHight{
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
 }
 
 /*
@@ -41,35 +53,35 @@
     $type: up,
     $color: #6699FF
  ){
-     width: 0;
-     height: 0;
-     @if $type == up {
-         border-left: $size/2 solid transparent;
-         border-right: $size/2 solid transparent;
-         border-bottom: $size solid $color;
-     }@else if $type == down {
-         border-left: $size/2 solid transparent;
-         border-right: $size/2 solid transparent;
-         border-top: $size solid $color;
-     }@else if $type == left {
-         border-top: $size/2 solid transparent;
-         border-right: $size/2 solid $color;
-         border-bottom: $size solid transparent;
-     }@else if $type == right {
-         border-top: $size/2 solid transparent;
-         border-left: $size/2 solid $color;
-         border-bottom: $size solid transparent;
-     }@else if $type == topleft {
-         border-top: $size solid $color;
-         border-right: $size solid transparent;
-     }@else if $type == topright {
-         border-top: $size solid $color;
-         border-left: $size solid transparent;
-     }@else if $type == bottomleft {
-         border-bottom: $size solid $color;
-         border-right: $size solid transparent;
-     }@else if $type == bottomright {
-         border-bottom: $size solid $color;
-         border-left: $size solid transparent;
-     }
+    width: 0;
+    height: 0;
+    @if $type == up {
+        border-left: $size/2 solid transparent;
+        border-right: $size/2 solid transparent;
+        border-bottom: $size solid $color;
+    }@else if $type == down {
+        border-left: $size/2 solid transparent;
+        border-right: $size/2 solid transparent;
+        border-top: $size solid $color;
+    }@else if $type == left {
+        border-top: $size/2 solid transparent;
+        border-right: $size/2 solid $color;
+        border-bottom: $size solid transparent;
+    }@else if $type == right {
+        border-top: $size/2 solid transparent;
+        border-left: $size/2 solid $color;
+        border-bottom: $size solid transparent;
+    }@else if $type == topleft {
+        border-top: $size solid $color;
+        border-right: $size solid transparent;
+    }@else if $type == topright {
+        border-top: $size solid $color;
+        border-left: $size solid transparent;
+    }@else if $type == bottomleft {
+        border-bottom: $size solid $color;
+        border-right: $size solid transparent;
+    }@else if $type == bottomright {
+        border-bottom: $size solid $color;
+        border-left: $size solid transparent;
+    }
  }
