--- a/app/templates/src4pc/sass/base/_mixins.scss
+++ b/app/templates/src4pc/sass/base/_mixins.scss
@@ -7,7 +7,7 @@
 /* ==========================================================================
    SASS function
    ========================================================================== */
-   
+
 /*
  * @name:  px转em
  * @param: $px {string}  对齐类型
@@ -45,7 +45,7 @@
  * @param:   $modifierSeparator {string}  M连接符
  * @param:   $selector {string}  类名
  * @thanks:  https://medium.com/@marcmintel/pushing-bem-to-the-next-level-with-sass-3-4-5239d2371321 by @Marcmintel(https://twitter.com/marcmintel)
- * @expamle:  
+ * @expamle:
     ============= user =============
     @include b(block) {
         background: red;
@@ -131,7 +131,7 @@
 //         }
 //     }
 // }
-   
+
 /* @name: 重置 */
 @mixin reset{
     margin: 0;
@@ -264,7 +264,7 @@
 }
 
 /* @name: 阻止长字符串（例如url或无意义连续英文字符）打破布局 */
-@mixin pre { 
+@mixin pre {
     white-space: pre;           // CSS 2.0
     white-space: pre-wrap;      // CSS 2.1
     white-space: pre-line;      // CSS 3.0
@@ -298,7 +298,7 @@
 
 /*
  * @name:  背景透明
- * @param: $color {color}  颜色  
+ * @param: $color {color}  颜色
  * @param: $opacity {number}  透明度
  * @param: $support-for-ie {boolean}  是否支持IE6
  * @link:  https://github.com/airen/Sass_mixins_function/tree/master/mixins
@@ -313,6 +313,36 @@
             filter: none;
         }
     }
+}
+
+/*
+ * @name:  背景线性渐变
+ * @param: $startColor {number}  渐变始点颜色
+ * @param: $endColor {boolean}  渐变终点颜色
+ * @param: $direction {color}  渐变方向
+ */
+@mixin gradient($startColor: rgba(255,255,255,0), $endColor: rgba(0,0,0,0.6), $direction: top) {
+    // 定义方向
+    @if ($direction == top) {
+        $endPoint : bottom;
+        $GradientType : 0;
+    } @else {
+        $endPoint : right;
+        $GradientType : 1;
+    }
+    background: none;
+    background-color: transparent;
+    // w3c标准 IE10支持
+    background-image: linear-gradient(to $endPoint, $startColor, $endColor);
+    // 新版本webkit
+    background-image: -webkit-linear-gradient($direction, $startColor, $endColor);
+    // moz
+    background-image: -moz-linear-gradient($direction, $startColor, $endColor);
+    // o
+    background-image: -o-linear-gradient($direction, $startColor, $endColor);
+    // IE9及以下
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#{ie-hex-str($startColor)},endColorstr=#{ie-hex-str($endColor)},GradientType=#{$GradientType});
+    zoom: 1;
 }
 
 /*
@@ -379,7 +409,7 @@
     *zoom:1;
     vertical-align: -2px;
     border-style: dashed;
-    
+
     @if($direction == top){
         border-width: $height $base / 2 ;
         border-color:transparent transparent $color transparent;
@@ -413,7 +443,7 @@
  * @resolution: http://screensiz.es/tablet
  * @link:       http://www.stephen.io/mediaqueries/
  */
- 
+
 /* ========= Screen ========= */
 
 //@media screen and (min-width ...) and (max-width ...){...}
