--- a/app/templates/src4mobi/sass/base/_tool.scss
+++ b/app/templates/src4mobi/sass/base/_tool.scss
@@ -1,3 +1,12 @@
+/* @name: 转为REM单位fn
+ * @ps: 默认宽度为750px
+ */
+@function toRem($px , $width: 750px) {
+	// 动态尺寸单位
+	$ppr: $width / 16 / 1rem;
+	@return ($px / $ppr);
+}
+
 /* @name: 上下左右居中 (未知高度)
  * @ps: 需要设置父元素 display:table
  */
